# regubot-chile

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Instrucciones.md  README.md  docker-compose.yml  pyproject.toml  railpack.toml  setup-railway.sh  start.sh
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: admin.py  chat.py  health.py
backend/app/db/: session.py
backend/app/ingestion/: base.py  bcch.py  chunker.py  cmf.py  leychile.py  parser.py  pipeline.py  sernac.py  sii.py  sp.py
backend/app/models/: __init__.py  base.py  chunk.py  norma.py  query_log.py  rate_limit.py
backend/app/orchestrator/: formatter.py  generator.py  intent.py  live_data.py  pipeline.py  planner.py  retriever.py  verifier.py
backend/app/prompts/: formatter.md  intent.md  system.md  verifier.md
backend/app/utils/: cache.py  claude_client.py  embeddings.py  security.py
backend/jobs/: refresh_live_data.py  reindex_daily.py  scheduler.py
backend/scripts/: bootstrap_corpus.py  eval_qa.py  seed_demo.py
backend/tests/test_ingestion/: test_chunker.py  test_parser.py
backend/tests/test_orchestrator/: test_intent.py  (+1 more)
data/: golden_qa.jsonl
docs/: ARCHITECTURE.md  AVANCE.md  DATOS_DISPONIBLES.md  DECISIONS.md  DEPLOY_RAILWAY.md  ERRORES.md  LEGAL.md  SOURCES.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  CitasPanel.tsx  CitationCard.tsx  Disclaimer.tsx  LiveDataBadge.tsx  Message.tsx
frontend/lib/: api.ts
(+1 files in other folders)
