[project]
name = "regbot-chile"
version = "0.1.0"
description = "Chatbot de regulación financiera chilena con IA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.5",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "pypdf>=4.3.0",
    "pdfplumber>=0.11.0",
    "redis>=5.1.0",
    "anthropic>=0.37.0",
    "openai>=1.40.0",
    "apscheduler>=3.10.0",
    "sentry-sdk[fastapi]>=2.14.0",
    "sse-starlette>=2.1.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
